--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/justbill?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url= jdbc:mysql://localhost:3306/**DataBaseName**?createDatabaseIfNotExist=true
+spring.datasource.username=**username**
+spring.datasource.password=**password**
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
